renamed styleguide file and fixed footer spacing and image structure again temporarily

--- a/pub_html/css/footer.css
+++ b/pub_html/css/footer.css
@@ -9,7 +9,7 @@
 .section-footer{
   margin-bottom: 0rem;
   padding-bottom: 1.5rem;
-  padding-top: 8rem;
+  padding-top: 1rem;
   background-color: #313333;
 }
 
